# tasnif-service

./: .gitignore  AGENTS.md  README.md  database.py  docker-compose.yml  main.py  manifest  models.py  pyproject.toml  requirements-dev.txt  requirements.txt  seed.py
.beads/: metadata.json
migrations/: env.py
migrations/versions/: 1f310a7f8051_create_products_packages_and_groups_.py
